# iw1x-server-r

./: CMakeLists.txt  README.md  iw1x.cfg
src/: functions.hpp  gsc.cpp  gsc.h  gsc.hpp  gsc_entity.cpp  gsc_player.cpp  gsc_sqlite.cpp  gsc_utils.cpp  gsc_weapons.cpp  hook.cpp  iw1x.cpp  iw1x.hpp  pch.h  shared.hpp  types.h  types.hpp
